--- a/main.html
+++ b/main.html
@@ -1,106 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
-   <link rel="stylesheet" href="./style.css">
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-
-<body>
-   <nav class="x">Table for Students</nav>
-   <div class="contains">
-      <div class="a">
-         <span class="material-icons"><a href="#">home</a></span><br>
-         <span class="material-icons"><a href="#">search</a></span><br>
-         <span class="material-icons"><a href="#">menu</a></span><br>
-         <span class="material-icons"><a href="#">expand_more</a></span><br>
-         <span class="material-icons"><a href="#">settings</a></span><br>
-         <span class="material-icons"><a href="#">logout</a></span><br>
-         <span class="material-icons"><a href="#">delete</a></span>
-      </div>
-
-      <div class="b">
-         <table style="border: 2px solid; width: 100%;">
-            <!-- first row table -->
-            <tr>
-               <td>
-                  <table class="border">
-                     <tr>
-                        <th>No. of students</th>
-                        <th>Subjects</th>
-                        <th>Test Attended</th>
-                        <th>Qualified</th>
-                     </tr>
-                     <tr>
-                        <td>300</td>
-                        <td>Frontend</td>
-                        <td>200</td>
-                        <td>180</td>
-                     </tr>
-                  </table>
-               </td>
-               <td>
-                  <table class="border">
-                     <tr>
-                        <th>No. of students</th>
-                        <th>Subjects</th>
-                        <th>Test Attended</th>
-                        <th>Qualified</th>
-                     </tr>
-                     <tr>
-                        <td>250</td>
-                        <td>Backend</td>
-                        <td>190</td>
-                        <td>150</td>
-                     </tr>
-                  </table>
-               </td>
-            </tr>
-            <!-- second row table -->
-            <tr>
-               <td>
-                  <table class="border">
-
-                     <tr>
-                        <th>List of skills</th>
-                     </tr>
-                     <tr>
-                        <td>
-                           <ul>
-                              <li>HTML</li>
-                              <li>CSS</li>
-                              <li>JAVASCRIPT</li>
-                              <li>REACT</li>
-                           </ul>
-                        </td>
-                     </tr>
-                  </table>
-               </td>
-               <td>
-                  <table class="border">
-                     <tr>
-                        <th>List of skills</th>
-                     </tr>
-                     <tr>
-                        <td>
-                           <ul>
-                              <li>DSA</li>
-                              <li>SPRING BOOT</li>
-                              <li>JAVA</li>
-                              <li>SQL</li>
-                           </ul>
-                        </td>
-                     </tr>
-                  </table>
-               </td>
-            </tr>
-         </table>
-      </div>
-   </div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Table</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <table style="width: 100%; height: 100%">
+      <!-- Your code here -->
+		<tr class="Row1">
+			<td class=Data1>
+				<table class="tab1">
+					<tr>
+						<th>Nested Table 2</th>
+					</tr>
+					<tr>
+						<th>Column 1</th><th>Column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td><td>def</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table class="tab1">
+					<tr><th>Nested Table 1</th></tr>
+					<tr><td><ul>
+						<li>List item 1</li>
+						<li>List item 2</li>
+						<li>List item 3</li>
+					</ul></td></tr>
+				</table>
+			</td>
+		</tr>
+		<tr class="Row1">
+			<td class="Data2"><table class="tab1">
+				<tr><th>Nested Table 3</th></tr>
+				<tr><td><a href="#">Nested Table</a></td>
+				<td>Demo Continued</td></tr>
+			</table></td>
+			<td>
+				<table class="tab1">
+					<tr><th>Nested Table 4</th></tr>
+					<tr style="color:white"><th style="background-color:black" >HTML</th></tr>
+				</table>
+			</td>
+		</tr>
+    </table>
+  </body>
 </html>
